--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ https://templatemo.com/tm-588-ebook-landing
 
                                 <h4 align="center" class="mb-4">According to statistics...</h4>
 
-                                <p align="center">Getting private access to renowed speakers like; <span style="color: black;"><strong>John C. Maxwell, Sam Adeyemi, Alex Homorzi, Dr. David Ogbueli, Dr. David Ogunshola, Fela Durutoye and the likes,</strong></span> will cost you an avaerage of <strong><span style="color: black;">$1,027</strong></span>, just to get in the same room with them.</p><br>
+                                <p align="center">Getting private access to renowed speakers like; <span style="color: black;"><strong>John C. Maxwell, Sam Adeyemi, Dr. Ibukun Awosika, Alex Homorzi, Dr. David Ogbueli, Dr. David Ogunshola, Fela Durutoye and the likes,</strong></span> will cost you an avaerage of <strong><span style="color: black;">$1,027</strong></span>, just to get in the same room with them.</p><br>
                                 <p align="center">Personally, that sounds like a lot to me.</p>
                                 
                             </div>
@@ -163,10 +163,11 @@ https://templatemo.com/tm-588-ebook-landing
                                 <p style="color: black;">Why? Because you <span style="color: red;">weren’t the kind of person who could drive one.</span><br>
                                 Even if you had begged, even if you had tried—your legs would have barely reached the pedals.</p><br><br>
                                 <h3>Here’s the truth:</h3>
-                                <p style="color: black;">Your life, your success, your income—<span style="color: red;">they all depend on WHO you are and what skills you have.</span></p><br>
-                                <p style="color: black;">If you’re not where you want to be, it’s not because you lack potential. <span style="color: red;">It’s because you haven’t yet become the kind of person who can achieve it.</span></p><br>
-                                <p style="color: black;"><span style="color: red;">So the question is… are you willing to stay grounded? Or are you ready to take control and finally level up?</span></p><br>
-                                The choice is yours—but time isn’t waiting. Act now.</p>
+                                <p style="color: black;">Your life, your success, your income—<span style="color: red;">they all depend on WHO YOU ARE</span> and what skills you have.</p><br>
+                                <p style="color: black;">If you’re not where you want to be, it’s not because you lack potential. <u>It’s because you haven’t yet become the kind of person who can achieve it.</u></p><br>
+                                <p style="color: black;"><span style="color: red;"><i><u>So the question is… are you willing to stay grounded? Or are you ready to take control and finally level up?</u></i></span></p><br>
+                                <p style="color: black;">The choice is yours—but time isn’t waiting.</p>
+                                <h4 style="color: red;">Act now.</h4>
                                 <hr style="color: white;">
                                 <blockquote class="blockquote">
                                     Are You Living Your Best Life? This Will Show You.<br>
@@ -189,7 +190,7 @@ https://templatemo.com/tm-588-ebook-landing
                                 <p style="color: black;">Not your parents.</p>
                                 <p style="color: black;">Not your spouse.</p>
                                 <p style="color: black;">Not your friends.</p><br>
-                                <h3>You.</h3><br>
+                                <h3 style="color: red;">You.</h3><br>
                                 <p style="color: black;">Everything in your life—your success, your happiness, your relationships, your finances—rises and falls with you.<br><br>
                                     Now, let’s put this to the test.</p><br><br>
                                 <ui align="left">
@@ -219,17 +220,18 @@ https://templatemo.com/tm-588-ebook-landing
                             </blockquote>
                                 <p style="color: black;">Now, picture your car tires looking like that.</p>
                                 <p style="color: black;">Would your car move? Be very honest.</p><br>
-                                <p style="color: red">That’s exactly what’s happening to your life.</p><br>
+                                <p style="color: red"><u><i>That’s exactly what’s happening to your life.</i></u></p><br>
                                 <p style="color: black">And until you fix it, you will keep feeling stuck.</p>
                                 <p style="color: black">You will keep wondering why nothing is working.</p>
                                 <p style="color: black">You will keep watching others move ahead while you stay in the same place.</p><br>
-                                <p style="color: red">But it doesn’t have to be this way.</p><br>
-                                <p style="color: black">This is your sign. Your wake-up call.</p>
-                                <p style="color: black">It’s time to take control. It’s time to fix the gaps in your life and build something real.</p><br>
-                                <p style="color: red">This Transformational Book Bundle will show you how.</p><br>
+                                <p style="color: black">But it doesn’t have to be this way.</p><br>
+                                <h5 style="color: red">This is your sign. Your wake-up call.</h5><br>
                                 <p style="color: black">But here’s the thing—not everyone will take action.</p>
                                 <p style="color: black">Some will see this, feel the truth in their gut, and still do nothing.</p><br>
-                                <p style="color: red">Don’t let that be you.</p><br>
+                                <h5 style="color: red">Don’t let that be you.</h5><br>
+                                <p style="color: black">It’s time to take control. It’s time to fix the gaps in your life and build something real.</p><br>
+                                <p style="color: black">This is why we are introducing this Transformational Book Bundle.</p><br>
+                                <p style="color: red"><u><i>This Transformational Book Bundle will show you how.</i></u></p><br>
                                 <p style="color: black">If you’re serious about living your best life, this is your chance.</p>
                                 <p style="color: black">Get the Transformational Book Bundle now—because waiting will only keep you exactly where you are.</p><br>
                                 <h3 style="color: red">The choice is yours.</h3><br>
@@ -243,7 +245,7 @@ https://templatemo.com/tm-588-ebook-landing
                     </div>
                     <hr style="color: white;">
                     <div class="col-lg-12 col-12 text-center">
-                        <small style="color: black;">With over 500+ Classic Ebooks, 100+ Audio Books, 200+ Hidden Podcasts and Upcoming events you don't want to miss.<br>
+                        <small style="color: black;">With over 500+ Classic Ebooks, 100+ Audio Books, 200+ Hidden Podcasts and Upcoming events you don't want to miss.<br><br>
                             <strong>We have AI Agents that summarizes these books for you,</strong> if you are the kind that finds it difficult to read.<br><br>
                             We have made this journey easy for you...</small>
                             <br><br>
@@ -643,37 +645,13 @@ https://templatemo.com/tm-588-ebook-landing
                             </form>
                         </div>
 
-                        <div class="col-lg-6 col-12">
-                            <h6 class="mt-5">Say hi and talk to us</h6>
-
-                            <h2 class="mb-4">Contact</h2>
-
-                            <p class="mb-3">
-                                <i class="bi-geo-alt me-2"></i>
-                                lagos, Nigeria
-                            </p>
-
-                            <p class="mb-2">
-                                <a href="tel: +2347026395253" class="contact-link">
-                                    +2347026395253
-                                </a>
-                            </p>
-
-                            <h6 class="site-footer-title mt-5 mb-3">Social</h6>
-
-                            <ul class="social-icon mb-4">
-                                <li class="social-icon-item">
-                                    <a href="https://instagram.com/thelapisblue" class="social-icon-link bi-instagram"></a>
-                                </li>
-
-                                <li class="social-icon-item">
-                                    <a href="https://wa.link/ji9bur" class="social-icon-link bi-whatsapp"></a>
-                                </li>
-                            </ul>
-
-                            <p class="copyright-text">Copyright © Lapis
-                            <br><br><a rel="nofollow" href="https://templatemo.com" target="_blank">designed by Lapis</a></p>
+                        <!-- Calendly inline widget begin -->
+                        <div class="col-lg-5 col-12 mx-auto calendly-inline-widget" 
+                            data-url="https://calendly.com/danifedibah/chat-with-daniel-clone" 
+                            style="min-width:320px;height:700px;">
                         </div>
+                        
+<!-- Calendly inline widget end -->
 
                     </div>
                 </div>
@@ -686,6 +664,7 @@ https://templatemo.com/tm-588-ebook-landing
         <script src="js/jquery.sticky.js"></script>
         <script src="js/click-scroll.js"></script>
         <script src="js/custom.js"></script>
+        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 
     </body>
 </html>
