--- a/index.html
+++ b/index.html
@@ -647,11 +647,43 @@ https://templatemo.com/tm-588-ebook-landing
                         </div>
             
                         <!-- Calendly Widget -->
-                        <div class="col-lg-5 col-md-10 col-12 d-flex justify-content-center">
+                        <div class="col-lg-4 col-md-10 col-12 d-flex justify-content-center">
                             <div class="calendly-inline-widget shadow rounded w-100" 
                                 data-url="https://calendly.com/danifedibah/chat-with-daniel-clone" 
                                 style="min-width:320px; height:700px;">
                             </div>
+                        </div>
+
+                        <div class="col-lg-3 col-12">
+                            <hr style="color: #E76F51;">
+                            <h2 class="mb-4">Contact</h2>
+
+                            <p class="copyright-text">
+                                <i class="bi-geo-alt me-2"></i>
+                                14, Community Road, Ago Palace Way, Okota, Lagos, Nigeria
+                            </p>
+
+                            <p class="copyright-text">
+                                <i class="bi bi-telephone me-2"></i>
+                                <a href="tel: +2347026395253" class="contact-link">
+                                    +2347026395253
+                                </a>
+                            </p>
+
+                            <h6 class="site-footer-title mt-5 mb-3">Social</h6>
+
+                            <ul class="social-icon mb-4">
+                                <li class="social-icon-item">
+                                    <a href="https://instagram.com/thelapisblue" class="social-icon-link bi-instagram"></a>
+                                </li>
+
+                                <li class="social-icon-item">
+                                    <a href="https://wa.link/ji9bur" class="social-icon-link bi-whatsapp"></a>
+                                </li>
+                            </ul>
+
+                            <p class="copyright-text">Copyright © The Lapis Blue,
+                            <a rel="nofollow" target="_blank"> designed by The Lapis Blue</a></p>
                         </div>
             
                     </div>
