--- a/index.html
+++ b/index.html
@@ -682,8 +682,7 @@ https://templatemo.com/tm-588-ebook-landing
                                 </li>
                             </ul>
 
-                            <p class="copyright-text">Copyright © The Lapis Blue,
-                            <a rel="nofollow" target="_blank"> designed by The Lapis Blue</a></p>
+                            <p class="copyright-text">Copyright © The Lapis Blue</p>
                         </div>
             
                     </div>
