--- a/index.html
+++ b/index.html
@@ -630,10 +630,18 @@ https://templatemo.com/tm-588-ebook-landing
                                             <i class="bi bi-person"></i>
                                         </span>
                                     </div>
+
+                                    <div class="input-group mb-3">
+                                        <input type="text" name="ebook-number" id="ebook-number" class="form-control" 
+                                            placeholder="Your Phone Number" required>
+                                        <span class="input-group-text">
+                                            <i class="bi bi-telephone"></i>
+                                        </span>
+                                    </div>
             
                                     <div class="input-group mb-3">
                                         <input type="email" name="ebook-email" id="ebook-email" pattern="[^ @]*@[^ @]*" 
-                                            class="form-control" placeholder="your@company.com" required>
+                                            class="form-control" placeholder="Your Email Address" required>
                                         <span class="input-group-text">
                                             <i class="bi bi-envelope"></i>
                                         </span>
