--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@ https://templatemo.com/tm-588-ebook-landing
                                     </div>
             
                                     <div class="text-center">
-                                        <small style="font-size: xx-small;" class="text-muted">After clicking the submit button, please wait for 10 secs.</small>
+                                        <small style="font-size: xx-small;" class="text-muted">After clicking the subscribe button, please wait for 10 secs.</small>
                                         <button type="submit" class="btn btn-primary w-100">Subscribe</button>
                                     </div>
             
