--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ https://templatemo.com/tm-588-ebook-landing
                             <form id="google-form" class="custom-form ebook-download-form bg-white shadow p-4 rounded">
                                 <div class="text-center mb-4">
                                     <h2 class="mb-3">Got a special request?</h2>
-                                    <small class="text-muted">I'm sure we have it, but please shoot your shot</small>
+                                    <small class="text-muted">I'm sure we have it, but please shoot your shot.</small>
                                 </div>
             
                                 <div class="ebook-download-form-body">
