--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ https://templatemo.com/tm-588-ebook-landing
                             <blockquote class="blockquote">
                                 Now Look at your own wheel. Be honest—does it look like a real circle? Or maybe a trapezium?<br><br>
                             </blockquote>
-                                <p style="color: black;">Now, picture your car tires looking like that.</p>
+                                <p style="color: black;">Now, picture your car tyres looking like that.</p>
                                 <p style="color: black;">Would your car move? Be very honest.</p><br>
                                 <p style="color: red"><u><i>That’s exactly what’s happening to your life.</i></u></p><br>
                                 <p style="color: black">And until you fix it, you will keep feeling stuck.</p>
