--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ https://templatemo.com/tm-588-ebook-landing
 
                                 <!-- Right Section (Audio Players) -->
                                 <div class="col-lg-12 col-12 text-center">
-                                    <h5 style="color: white;">Lol, that's not all, listen to this, come on, it's just less tha 5 minutes...</h5>
+                                    <h5 style="color: white;">Lol, that's not all, listen to this, come on, it's just less than 5 minutes...</h5>
                                 </div>
                                 
                                 <div class="col-lg-12 col-12 text-center">
@@ -303,7 +303,7 @@ https://templatemo.com/tm-588-ebook-landing
                         <hr><hr>
 
                         <div class="col-lg-12 col-12 text-center">
-                            <small style="color: white">With over 500+ Classic Ebooks, 100+ Audio Books, 200+ Hidden Podcasts and Upcoming events you don't want to miss.<br>
+                            <small style="color: white">With over 500+ Classic Ebooks, 100+ Audio Books, 200+ Hidden Podcasts and Upcoming events you don't want to miss.<br><br>
                                 <strong>We have AI Agents that summarizes these books for you,</strong> if you are the kind that finds it difficult to read.<br><br>
                                 We have made this journey easy for you...</small>
                                 <br><br>
